--- a/funcaoMinMax/funcaoMinMax.html
+++ b/funcaoMinMax/funcaoMinMax.html
@@ -9,6 +9,6 @@
     <body>
         <h1>Título do Site</h1>  
         
-        <img src="https://www.google.com.br/google.jpg"
+        <img src="https://www.google.com.br/google.jpg"/>
     </body>
 </html>
