Inclusão de anotações sobre o incrível Transform.

--- a/seletores/seletorBeforeAfter/index.html
+++ b/seletores/seletorBeforeAfter/index.html
@@ -9,6 +9,14 @@
     <body>
         <span>Texto 1</span>
 
-        <div>Learning about Before and After</div>
+        <div class="ballonOne">Learning about <br>
+            Before and After</div>
+
+         <div class="ballonTwo">Div test<br>
+            Ballon two</div>
+
+
+         <div class="ballonThree">Div test<br>
+            Ballon three</div>
     </body>
 </html>
