--- a/css-grid/index.html
+++ b/css-grid/index.html
@@ -12,7 +12,12 @@
             <div class="item">2</div>
             <div class="item">3</div>
             <div class="item">4</div>
-            <div class="item">5</div>
+            <div class="item">
+                5<br/>
+                Utilizando grid<br/>
+                propriedade para auto row<br/>
+                com minmax para definir tamanho minimo e tamanho máximo, com "auto" para ficar flexível
+            </div>
             <div class="item">6</div>
             <div class="item">7</div>
             <div class="item">8</div>
